--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 Hello there, awesome person!
 <html>
   <body>
+     <title>My HAPPY web page</title>
     Hello there, awesome person! 
   </body>
 </html>
