--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 Hello there, awesome person!
 <html>
-    <title>My awesome web page</title>
+    <head>
+        <title>I am a title!</title>
+    </head>
+
+    <body>
+        Some content.
+    </body>
 </html>
