--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ Hello there, awesome person!
     </head>
     
     <body>
+         <h1> LEARN_&_EARN ACADEMY </h1>
         Some content.
     </body>
 </html>
