--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ Hello there, awesome person!
     
     <body>
          <h1> LEARN_&_EARN ACADEMY </h1>
+         <img src="https://avatars.githubusercontent.com/u/88046682?v=4">
+
         Some content.
     </body>
 </html>
