--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@ Hello there, awesome person!
     <body>
          <h1> LEARN_&_EARN ACADEMY </h1>
          <img src="https://avatars.githubusercontent.com/u/88046682?v=4">
+        <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
 
         Some content.
     </body>
